--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 #######################
 target
 
+# dist files #
+#######################
+silentspace-dist/dist
+
 # java class files #
 #######################
 *.class
