--- a/pom.xml
+++ b/pom.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.snoopdesigns.silentspace</groupId>
-	<artifactId>silentspace-all</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>silentspace-all</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<properties>
-		<gdx.version>0.9.9</gdx.version>
-		<android.version>4.1.1.4</android.version>
-		<android.maven.version>3.6.0</android.maven.version>
-		<gwt.version>2.5.0</gwt.version>
-		<gwt.maven.version>2.5.0</gwt.maven.version>
-	</properties>
+    <groupId>org.snoopdesigns.silentspace</groupId>
+    <artifactId>silentspace-all</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<repositories>
-		<repository>
-			<id>gdx-nightlies</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-	</repositories>
+    <properties>
+        <gdx.version>0.9.9</gdx.version>
+        <android.version>4.1.1.4</android.version>
+        <android.maven.version>3.6.0</android.maven.version>
+        <gwt.version>2.5.0</gwt.version>
+        <gwt.maven.version>2.5.0</gwt.maven.version>
+        <java.version>17</java.version>
+    </properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <repositories>
+        <repository>
+            <id>gdx-nightlies</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 
-	<modules>
-		<module>silentspace-core</module>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <modules>
+        <module>silentspace-core</module>
         <module>silentspace-desktop-app</module>
         <module>silentspace-dist</module>
-	</modules>
+    </modules>
 </project>
